# clock_machine

./: .gitignore  .isort.cfg  clock.service  pyproject.toml  read.py  write.py
clock_machine/: buzzer.py  cli.py  clock_reader.py  rfid.py  screen.py
