[tool.poetry]
name = "clock_machine"
version = "0.1.0"
description = ""
authors = ["Luke Shiner"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
mfrc522 = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
