[tool.poetry]
name = "clock_machine"
version = "0.1.0"
description = ""
authors = ["Luke Shiner"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
mfrc522 = "^0.0.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.5.4"

[tool.poetry.scripts]
clock_machine = "clock_machine.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

